--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "electron .",
-		"package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets.icon.icon512_DoIt.png --prune=true --out=release-builds",
-		// "package-windows": "electron-packager . ",
-		// "package-linux": "electron-packager . "
+		"start": "electron ."
 	},
 	"keywords": [],
 	"author": "",
